fix: made the button un the new-edit note page visible for touch screens

--- a/public/new.css
+++ b/public/new.css
@@ -298,10 +298,6 @@ a {
         gap: 26px;
     }
 
-    .new-note header i {
-        opacity: 1;
-    }
-
     .new-note header button .close {
         font-size: 36px;
     }
@@ -321,5 +317,11 @@ a {
     .new-note main .content-input {
         font-size: 20px;
         flex: 1;
+    }
+}
+
+@media only screen and (pointer: coarse) {
+    .new-note header button {
+        opacity: 0.7;
     }
 }
